<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_marginBottom="80dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_routs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                app:cardElevation="2dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/routs_title"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="55dp"
                        android:gravity="center"/>
                    <TextView
                        android:id="@+id/tv_route_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/routs_mesage"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"/>
                    <Button
                        android:id="@+id/btn_route_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="$0.99"
                        android:textColorHint="@android:color/white"
                        android:textAllCaps="true"
                        android:background="@drawable/unlock_button"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/img_route"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_routs_icon"/>

            </FrameLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rl_routs">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                app:cardElevation="2dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/map_title"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="55dp"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/map_mesage"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"/>
                    <Button
                        android:id="@+id/btn_map_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="$0.99"
                        android:textColorHint="@android:color/white"
                        android:textAllCaps="true"
                        android:background="@drawable/unlock_button"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/img_map"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_icon_map"/>

            </FrameLayout>
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rl_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rl_map">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_nitification"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                app:cardElevation="2dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications_title"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="55dp"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notifications_mesage"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"/>
                    <Button
                        android:id="@+id/btn_notification_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="$0.99"
                        android:textColorHint="@android:color/white"
                        android:textAllCaps="true"
                        android:background="@drawable/unlock_button"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/img_notification"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_notification_icon"/>

            </FrameLayout>
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rl_bundle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rl_notification">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_bundle"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                app:cardElevation="2dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buldle_title"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="55dp"
                        android:gravity="center"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bundle_mesage"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:layout_marginTop="15dp"
                        android:drawablePadding="10dp"
                        android:gravity="center"/>
                    <Button
                        android:id="@+id/btn_bundle_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="$2.47"
                        android:textColorHint="@android:color/white"
                        android:textAllCaps="true"
                        android:background="@drawable/unlock_button"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp">
                <ImageView
                    android:id="@+id/img_bundle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_bundle_icon"/>

            </FrameLayout>
        </RelativeLayout>

    </RelativeLayout>


</ScrollView>


</RelativeLayout>