<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pinknblue.ForgotPassActivity"
    tools:showIn="@layout/activity_forgot_pass">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_forgot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:orientation="vertical">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:src="@mipmap/reset_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_message"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="13sp"/>
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="Email address"
                android:inputType="textEmailAddress"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:drawableLeft="@mipmap/email_icon"
                android:drawablePadding="10dp"
                android:padding="12dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"></View>

            <Button
                android:id="@+id/btn_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="get temporary password"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:background="@drawable/forgot_button"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:src="@mipmap/forgot_logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="Temporary password"
                android:inputType="textPassword"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:drawableLeft="@mipmap/ic_password"
                android:drawablePadding="10dp"
                android:padding="12dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"></View>

            <EditText
                android:id="@+id/edt_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="New password"
                android:inputType="textPassword"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:drawableLeft="@mipmap/ic_password"
                android:drawablePadding="10dp"
                android:padding="12dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"></View>
            <EditText
                android:id="@+id/edt_confpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="Confirm new password"
                android:inputType="textPassword"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:drawableLeft="@mipmap/ic_password"
                android:drawablePadding="10dp"
                android:padding="12dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/white"></View>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Reset password"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:background="@drawable/forgot_button"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
